--- a/extscript-core-root/extscript-core-java6/pom.xml
+++ b/extscript-core-root/extscript-core-java6/pom.xml
@@ -3,7 +3,7 @@
     <artifactId>extscript-core-java6</artifactId>
     <packaging>jar</packaging>
     <name>Core java6 part</name>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
 
     <description>
         myfaces extension scripting java6 lib
@@ -12,20 +12,20 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.2/extscript-core-root/extscript-core-java6</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.2/extscript-core-root/extscript-core-java6</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.2/extscript-core-root/extscript-core-java6</url>
     </scm>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
