--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
     <version>1.0.3-SNAPSHOT</version>
-
+	<!-- test -->
     <properties>
         <myfaces12.version>1.2.9</myfaces12.version>
         <myfaces2.version>2.1.6</myfaces2.version>
