--- a/extscript-examples/blog-example/pom.xml
+++ b/extscript-examples/blog-example/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>blog-example</artifactId>
     <packaging>war</packaging>
-    <name>A custom project using myfaces 2.0</name>
+    <name>A simple blogging project using myfaces 2.0</name>
     <version>1.0.3-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
