--- a/extscript-examples/blog-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/blog-example/src/main/webapp/WEB-INF/web.xml
@@ -122,6 +122,10 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
