--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,14 @@
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
     <version>1.0.3-SNAPSHOT</version>
-	<!-- test -->
+    <!-- test -->
     <properties>
         <myfaces12.version>1.2.9</myfaces12.version>
         <myfaces2.version>2.1.6</myfaces2.version>
         <extval.version>2.0.5</extval.version>
         <groovy.version>1.7.2</groovy.version>
+        <maven-scala-plugin.scalaVersion>2.15.2</maven-scala-plugin.scalaVersion>
+        <scala-library.version>2.8.1</scala-library.version>
     </properties>
 
 
@@ -58,8 +60,21 @@
     </scm>
 
 
-
     <dependencies>
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala-library.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala-library.version}</version>
+        </dependency>
+
         <!-- compile -->
         <dependency>
             <groupId>javax.el</groupId>
@@ -124,10 +139,45 @@
                         <outputEncoding>UTF-8</outputEncoding>
                     </configuration>
                 </plugin>
-            </plugins>
+                <plugin>
+                    <groupId>org.scala-tools</groupId>
+                    <artifactId>maven-scala-plugin</artifactId>
+                    <version>${maven-scala-plugin.scalaVersion}</version>
+                </plugin>
+           </plugins>
+
         </pluginManagement>
 
+
         <plugins>
+            <!-- scala tools plugin -->
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <executions>
+
+                    <execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <phase>compile</phase>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                        <phase>test-compile</phase>
+                    </execution>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
