--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <extval.version>2.0.5</extval.version>
         <groovy.version>1.7.2</groovy.version>
         <maven-scala-plugin.scalaVersion>2.15.2</maven-scala-plugin.scalaVersion>
-        <scala-library.version>2.8.1</scala-library.version>
+        <scala-library.version>2.10.0-M2</scala-library.version>
     </properties>
 
 
