--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -3,7 +3,7 @@
     <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
     <name>Examples Submodule</name>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
 
     <description>
         Examples Meta Project, see the subprojects
@@ -13,16 +13,16 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.3/extscript-examples
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.3/extscript-examples
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples</url>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.3/extscript-examples</url>
     </scm>
 
 
