--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
     <version>1.0.4-SNAPSHOT</version>
-    <url>http://myfaces.apache.org/ext-scripting</url>
+    <url>http://myfaces.apache.org/extensions/scripting</url>
     <!-- test -->
     <properties>
         <myfaces12.version>1.2.9</myfaces12.version>
@@ -134,20 +134,43 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <inherited>true</inherited>
-                    <version>2.2</version>
-                    <configuration>
-                        <outputEncoding>UTF-8</outputEncoding>
-                    </configuration>
 
-                </plugin>
                 <plugin>
                     <groupId>org.scala-tools</groupId>
                     <artifactId>maven-scala-plugin</artifactId>
                     <version>${maven-scala-plugin.scalaVersion}</version>
                 </plugin>
+                <!-- SITE GENERATION -->
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.9</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>2.9</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.8</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jxr-plugin</artifactId>
+                    <version>2.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>taglist-maven-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-changelog-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+
             </plugins>
 
         </pluginManagement>
@@ -251,84 +274,17 @@
     <reporting>
         <plugins>
 
+            <!--
             <plugin>
-
-                <artifactId>maven-changelog-plugin</artifactId>
-                <version>2.1</version>
-                <reportSets>
-                    <reportSet>
-                        <id>dual-report</id>
-                        <configuration>
-                            <type>range</type>
-                            <range>30</range>
-                        </configuration>
-                        <reports>
-                            <report>changelog</report>
-                            <report>file-activity</report>
-                            <report>dev-activity</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>2.8</version>
+            </plugin>
+            -->
+            <plugin>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.4</version>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jxr-maven-plugin</artifactId>
-
-                <!--
-                <configuration>
-                    <aggregate>true</aggregate>
-                </configuration>
-                -->
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-
-                <configuration>
-                    <tags>
-                        <tag>TODO</tag>
-                        <tag>FIXME</tag>
-                        <tag>XXX</tag>
-                        <tag>@deprecated</tag>
-                    </tags>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>surefire-report-maven-plugin</artifactId>
-                <version>2.12</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-
-                <configuration>
-                    <targetJdk>1.5</targetJdk>
-                </configuration>
-            </plugin>
-
-            <!-- cobertura code coverage plugin -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
 
         </plugins>
     </reporting>
@@ -366,7 +322,7 @@
         <site>
             <id>apache-site</id>
             <name>Apache Website</name>
-            <url>scpexe://people.apache.org/www/myfaces.apache.org/ext-scripting/</url>
+            <url>scp://people.apache.org/www/myfaces.apache.org/extensions/scripting/</url>
         </site>
     </distributionManagement>
 
