--- a/extscript-core-root/pom.xml
+++ b/extscript-core-root/pom.xml
@@ -3,7 +3,7 @@
     <artifactId>extscript-core-root</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting Core Engine</name>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
 
     <description>
          MyFaces Extension Scripting Core Meta Project
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4/extscript-core-root</url>
     </scm>
 
     <modules>
