--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>extscript-root</artifactId>
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <url>http://myfaces.apache.org/extensions/scripting</url>
     <!-- test -->
     <properties>
@@ -56,10 +56,10 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0.4
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk
         </developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0.4</url>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk</url>
     </scm>
 
 
