--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,24 @@
 
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.rat</groupId>
+                    <artifactId>apache-rat-plugin</artifactId>
+                    <version>0.8</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>.idea/**/*</exclude>
+                            <exclude>readme/**/*</exclude>
+                            <exclude>**/licenses/**/*</exclude>
+                            <exclude>.git/**/*</exclude>
+                            <exclude>**/*.log</exclude>
+                            <exclude>**/LICENSE.TXT</exclude>
+                            <exclude>**/NOTICE.TXT</exclude>
+                            <exclude>.gitignore</exclude>
+                            <exclude>atlassian-ide-plugin.xml</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
 
                 <plugin>
                     <groupId>org.scala-tools</groupId>
@@ -186,6 +204,7 @@
 
 
         <plugins>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -284,7 +303,25 @@
                 </plugins>
             </build>
         </profile>
-
+        <profile>
+            <id>rat</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.rat</groupId>
+                        <artifactId>apache-rat-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
     <distributionManagement>
         <site>
